# bench-linear-access

./: .gitignore  CMakeLists.txt  README.md  build.py  create-charts.py  run-debug.py  run.py
results/macbook-air-m4/: result.csv
results/ryzen-9-7950X3D/: result.csv
src/: helper.hh  kernels.hh  main.cc
